get subject by id
