# gestioncours/spring-server/target/classes/api-spec.yaml
@@ -42,7 +42,32 @@ paths:
                   $ref: '#/components/schemas/SubjectList'
         '401':
           description: unexpected error
-
+  /subjects/{id}:
+    get:
+      description: gets a single subject based on the ID supplied
+      operationId: getASubject
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+            minimum: 1
+            description: The user ID
+      responses:
+        '200':
+          description: success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SubjectList'
+        '401':
+          description: unexpected error
+        '403':
+          description: forbidden
+        '404':
+          description: not found
   /enrollments:
     post:
       operationId: createEnrollment
